--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "dependencies": {
         "@oceanprotocol/art": "^2.2.0",
         "axios": "^0.18.0",
+        "create-react-app": "^3.1.1",
+        "eslint-plugin-node": "^10.0.0",
         "gray-matter": "^4.0.2",
         "jsonp": "^0.2.1",
         "prop-types": "^15.6.2",
@@ -61,10 +63,5 @@
     "reactSnap": {
         "cacheAjaxRequests": true,
         "fixWebpackChunksIssue": false
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "npm run lint"
-        }
     }
 }
